#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-13-13
2014-10-09 David
- add [[DEVEL]] tag for type definitions. psddlc will skip parseing of these
  types by default. Users can give psddlc the -D option to force code generation
  of the [[DEVEL]] types. See JIRA Issue PSAS-42

Tag: V00-13-12
2014-06-14 David
- Translator backend: move default_psana.cfg into data subdir.
- python backend: check for mix of versioned and unversioned types,
  do not generate unversioned list of versioned types in there is a mix.
  trac ticket: https://pswww.slac.stanford.edu/trac/psdm/ticket/309#comment:2

Tag: V00-13-11
2014-05-13 David
- Adjust backend for psana_test package.

Tag: V00-13-10
2014-05-09 David
- Add backend for psana_test package.

Tag: V00-13-09
2014-03-25 David
- Documenting error with check in of Tag V00-13-13 from Jan 2013. That
- tag name is an error. It was supposed to be tag V00-13-03.

Tag: V00-13-08
2014-03-25 David
- Translator backend: add ndarray writers for const elements

Tag: V00-13-07
2014-01-29 Andy
- hdf5 backend now dumps schema in DDL format instead of old XML format

Tag: V00-13-06
2014-01-16 David Schneider
- Translator backend: remove template as it has been relocated to Translator package

Tag: V00-13-05
2014-01-15 David Schneider
- Allow templates to be loaded from different packages other than psddl
- Translator backend: get codegen template from Translator package

Tag: V00-13-04
2014-01-14 David Schneider
- Translator backend: documentation (overwrite and create_alias_links options)

Tag: V00-13-13
2014-01-13 David Schneider
- Translator backend: update documentation to describe psana Source syntax